completed my final resume

--- a/Palesa's final resume.html
+++ b/Palesa's final resume.html
@@ -76,16 +76,16 @@
                 ReadingEggs Facilitator/Stock control officer/Administration assistant
                 Current</b>
             <ul>
-               <p> <b>In The Lab</b>
-                <li>Facilitaing computer lab </li>
-                <li>Monitorying Inventory</li>
-                <li>Stock control</li>
+                <p> <b>In The Lab</b>
+                    <li>Facilitaing computer lab </li>
+                    <li>Monitorying Inventory</li>
+                    <li>Stock control</li>
                 </p>
 
                 <b>Administration Assistant</b>
 
                 <li>Capturing new learners on SASAMS</li>
-                <li>Typing of Minutes</li> 
+                <li>Typing of Minutes</li>
                 <li>Keep and maintain the incoming and outgoingcorrespondence.</li>
                 <li>Recieving calls from and to parents</li>
 
@@ -117,28 +117,10 @@
 
     <h3 id="contract">Contact details</h3>
     <div>
-        <a class="link" href="https://www.facebook.com/"><img id="icon" src="images/facebook icon.jpg"
-                target="_blank"></a></li>
+        <a class="link" href="https://www.facebook.com/"><img id="icon" src="images/facebook icon.jpg"></a></li>
         <a class="link" href="https://www.instagram.com/"><img id="icon" src="images/instagram icon.png"></a></li>
         <a class="link" href="https://mail.google.com/mail/u/0/"><img id="icon" src="images/gmail icon.png"></a>
 
     </div>
 </footer>
 <!-- END OF FOOTER -->
-
-
-
-
-
-
-
-
-
-
-</p>
-
-
-
-</body>
-
-</html>
